feat: docs 변경, presigned-url 받는 것도 반영
